feat: implements obj exporter